# generator_rust

./: Cargo.toml
src/: db.rs  main.rs  util.rs
